--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
   <artifactId>ALYSONBASILIO_QUESTAO8A</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
-  
+  	<dependency>
+	    <groupId>com.bluecatcode.mockito</groupId>
+	    <artifactId>mockito-1.10.19-extended</artifactId>
+	    <version>1.1.0</version>
+	</dependency>
   </dependencies>
 </project>
